Move the clear button to avoid obscuring the scrollbar on longer outputs

--- a/src/scss/section/_console.scss
+++ b/src/scss/section/_console.scss
@@ -21,8 +21,8 @@
 
     .clear-console {
         position: absolute;
-        bottom: 1.5rem;
-        right: 2rem;
+        bottom: 2.5rem;
+        right: 3rem;
         color: fade-out(white, 0.1);
         padding: 0.75rem;
         font-weight: 500;
